# Search-Algorithms

./: Astar.cpp  Astar.h  BFS.cpp  BestFS.cpp  CMakeLists.txt  CacheManager.h  ClientHandler.h  ClientThread.h  DFS.cpp  FileCacheManager.cpp  GlobalCache.cpp  GlobalCache.h  Main.cpp  MatrixProblem.cpp  MyClientHandler.cpp  MySerialServer.cpp  README.md  Searchable.h  Searcher.h  Server.h  SolutionCreator.cpp  Solver.h  graph1.txt  graph10.txt  graph2.txt  graph3.txt  graph4.txt  graph5.txt  graph6.txt  graph7.txt  graph8.txt  graph9.txt  main.cpp  makefile  solutions.txt
projKillEli2/projKillEli/proj2/: Astar.cpp  Astar.h  BFS.cpp  BestFS.cpp  CMakeLists.txt  CacheManager.h  ClientThread.h  DFS.cpp  FileCacheManager.cpp  GlobalCache.cpp  GlobalCache.h  Main.cpp  MatrixProblem.cpp  MyClientHandler.cpp  MySerialServer.cpp  ReverseStringProblem.cpp  Searchable.h  Searcher.h  Server.h  SolutionCreator.cpp  Solver.h  main.cpp  matrix.txt  roytheboy.txt  solutions.txt
